Minor Changes : rewrote login method, fix admin dashboard text alignment issue, admin dashboard 50% complete

--- a/public/admin/overview.html
+++ b/public/admin/overview.html
@@ -56,13 +56,13 @@
             </div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
-                <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i>Overview</li></a>
-                <a href="./addacell.html"><li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i>Add a cell</li></a>
-                <a href="./view-users.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i>View Users</li></a>
-                <a href="./view-cell-reports.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i>View Cell Reports</li></a>
-                <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i>Souls Won</li></a>
-                <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i>Schedule Service</li></a>
-                <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i>Annoucements</li></a>
+                <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i><p>Overview</p></li></a>
+                <a href="./addacell.html"><li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i><p>Add a cell</p></li></a>
+                <a href="./view-users.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i><p>View Users</p></li></a>
+                <a href="./view-cell-reports.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i><p>View Cell Reports</p></li></a>
+                <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i><p>Souls Won</p></li></a>
+                <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i><p>Schedule Service</p></li></a>
+                <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i><p>Annoucements</p></li></a>
                 <!-- <li class="dashboard-items></li> -->
               </ul>
             </div>
