--- a/public/admin/view-cells-leaders.html
+++ b/public/admin/view-cells-leaders.html
@@ -59,22 +59,13 @@
             </div>
             <div class="form-group">
               <select type="text" placeholder="" name="LeaderPosition" id="LeaderPosition" required>
-                <option value="N/A" hidden>Select an option</option>
-                <option value="CO-ORDINATOR">CO-ORDINATOR</option>
-                <option value="PCF">PCF LEADER</option>
-                <option value="SENIOR-CELL">SENIOR-CELL LEADER</option>
-                <option value="CELL">CELL LEADER</option>
+                <!-- Populated from script -->
               </select>
               <label for="LeaderPosition">Leader Position</label>
             </div>
             <div class="form-group">
               <select type="text" placeholder="" name="CellType" id="CellType" required>
-                <option value="N/A" hidden>Select an option</option>
-                <option value="PCF">PCF</option>
-                <option value="SENIOR-CELL">SENIOR-CELL</option>
-                <option value="CELL">CELL</option>
-                <option value="Teens-Church">Teens Church</option>
-                <option value="Youth-Church">Youth Church</option>
+                <!-- Populated from script -->
               </select>
               <label for="CellType">Cell Type</label>
             </div>
@@ -115,13 +106,13 @@
             </div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
-                <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i>Overview</li></a>
-                <a href="./addacell.html"><li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i>Add a cell</li></a>
-                <a href="./view-users.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i>View Users</li></a>
-                <a href="./view-cell-reports.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i>View Cell Reports</li></a>
-                <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i>Souls Won</li></a>
-                <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i>Schedule Service</li></a>
-                <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i>Annoucements</li></a>
+                <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i><p>Overview</p></li></a>
+                <a href="./addacell.html"><li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i><p>Add a cell</p></li></a>
+                <a href="./view-users.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i><p>View Users</p></li></a>
+                <a href="./view-cell-reports.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i><p>View Cell Reports</p></li></a>
+                <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i><p>Souls Won</p></li></a>
+                <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i><p>Schedule Service</p></li></a>
+                <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i><p>Annoucements</p></li></a>
                 <!-- <li class="dashboard-items></li> -->
               </ul>
             </div>
