--- a/public/admin/view-cell-reports.html
+++ b/public/admin/view-cell-reports.html
@@ -6,7 +6,7 @@
     <title>CeAbaranje || Dashboard/EditProfile</title>
     <link rel="icon" href="../src/favicon.ico">
     <link rel="stylesheet" href="../stylesheet/defaultdashboard.css">
-    <link rel="stylesheet" href="../stylesheet/view-cell-reports.css">
+    <link rel="stylesheet" href="../stylesheet/view-cell-reports.css"> 
     <link rel="stylesheet" href="../annimations.css">
     <link rel="stylesheet" href="../media.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -35,6 +35,12 @@
 </head>
 <body>
   <main class="sub-body">
+    <div class="prompt-parent hidden" id="message-prompt">
+      <div class="success-prompt" >
+          <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
+          <h2 id="message-text"></h2>
+      </div>
+    </div>
     <main class="dashboard-sub-body">
       <nav class="vertical-navbar">
         <div class="vertical-navbar-box">
@@ -53,13 +59,13 @@
             </div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
-                <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i>Overview</li></a>
-                <a href="./addacell.html"><li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i>Add a cell</li></a>
-                <a href="./view-users.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i>View Users</li></a>
-                <a href="./view-cell-reports.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i>View Cell Reports</li></a>
-                <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i>Souls Won</li></a>
-                <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i>Schedule Service</li></a>
-                <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i>Annoucements</li></a>
+                <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i><p>Overview</p></li></a>
+                <a href="./addacell.html"><li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i><p>Add a cell</p></li></a>
+                <a href="./view-users.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i><p>View Users</p></li></a>
+                <a href="./view-cell-reports.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i><p>View Cell Reports</p></li></a>
+                <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i><p>Souls Won</p></li></a>
+                <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i><p>Schedule Service</p></li></a>
+                <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i><p>Annoucements</p></li></a>
                 <!-- <li class="dashboard-items></li> -->
               </ul>
             </div>
@@ -83,24 +89,68 @@
             </a>
             <h1>Admin Dashboard</h1>
           </div>
+
           <div class="empty-div"></div>
           <div class="overview">
-            <span class="overview-text">
-              <h2>User Details</h2>
-              <p>Verify and update your details </p>
-            </span>
-            <div class="prompt-parent hidden" id="message-prompt">
-              <div class="success-prompt" >
-                  <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
-                  <h2 id="message-text"></h2>
+            <!-- HERE -->
+            <div class="table-padding">
+              <div class="table-container">
+                <div class="search-box">
+                  <div class="search-parent">
+                    <input id="searchInput" type="text" placeholder="Search here..." />
+                    <i id="searchButton" class="fa fa-search"></i>
+                  </div>
+                  <div class="ellipsis fa-solid fa-ellipsis-vertical" id="three-dots-download" onclick="threeDotsToggleHandler();">
+                    <div class="drop-down hidden" id="togglehiddendropdown">
+                      <button class="download-button" id="clickmetodownload">Download</button>
+                    </div>
+                  </div>
+                </div>
+                <table class="users-table" id="usersTableData">
+                  <thead>
+                    <tr>
+                      <th>SN</th>
+                      <th>Full Name</th>
+                      <th>Phone Number</th>
+                      <th>Cell</th>
+                      <th>Service Attendance</th>
+                      <th>Sunday First Timers</th>
+                      <th>Cell Meeting Attendance</th>
+                      <th>First Timers</th>                      
+                      <th>Offering</th>
+                      <th>submission Date</th>
+                    </tr>      
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
               </div>
             </div>
-            <!-- HERE -->
-            
         </div>
+        <footer class="dashboard-footer">
+          <div class="footer-container">
+            <a href="./view-cells-leaders.html">View Cells and Leaders</a>
+            <div id="paginationControls" class="pagination">
+              <button id="prevPage" disabled>&laquo; Previous</button>
+              <span id="pageInfo"></span>
+              <button id="nextPage">Next &raquo;</button>
+          </div>
+          </div>
+        </footer>
       </section>
     </main>
   </main>
   <script defer src="../script/view-cell-reports.js"></script>
+  <script src="../script/table2excel.js"></script>
+  <script>
+    document.getElementById('clickmetodownload').addEventListener('click', function () {
+      var table2excel = new Table2Excel();
+      table2excel.export(document.querySelectorAll("#usersTableData"));
+    })
+    function threeDotsToggleHandler() {
+      const threeDots = document.getElementById('togglehiddendropdown');
+      threeDots.classList.toggle('hidden');
+    };
+  </script>
 </body>
 </html>
