ADMIN DASHBOARD 65% - COMPLETE

--- a/public/admin/overview.html
+++ b/public/admin/overview.html
@@ -54,6 +54,7 @@
                 <a href="./dashboard.html">Edit Profile</a>
               </span>
             </div>
+            <div class="edit-profile"></div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
                 <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i><p>Overview</p></li></a>
