--- a/public/admin/addacell.html
+++ b/public/admin/addacell.html
@@ -60,6 +60,7 @@
                 <a href="./dashboard.html">Edit Profile</a>
               </span>
             </div>
+            <div class="edit-profile"></div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
                 <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i><p>Overview</p></li></a>
@@ -125,8 +126,6 @@
                     <option value="PCF">PCF</option>
                     <option value="SENIOR-CELL">SENIOR-CELL</option>
                     <option value="CELL">CELL</option>
-                    <option value="Teens-Church">Teens Church</option>
-                    <option value="Youth-Church">Youth Church</option>
                   </select>
                   <label for="CellType">Cell Type</label>
                 </div>
