--- a/public/admin/schedule-service.html
+++ b/public/admin/schedule-service.html
@@ -47,6 +47,7 @@
                 <span><p class="userGreeting" id="usersdetails">Admin</p></span>
               </div>
             </div>
+            <div class="edit-profile"></div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
                 <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i><p>Overview</p></li></a>
