--- a/public/admin/view-cell-reports.html
+++ b/public/admin/view-cell-reports.html
@@ -52,11 +52,8 @@
                 </span>
                 <span><p class="userGreeting" id="usersdetails">Admin</p></span>
               </div>
-              <span class="edit-profile hidden">
-                <i class="fa-duotone fa-user-pen"></i>
-                <a href="./dashboard.html">Edit Profile</a>
-              </span>
             </div>
+            <div class="edit-profile"></div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
                 <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i><p>Overview</p></li></a>
@@ -122,6 +119,7 @@
                     </tr>      
                   </thead>
                   <tbody>
+                    <!-- Data Populated form java script -->
                   </tbody>
                 </table>
               </div>
