--- a/public/admin/overview.html
+++ b/public/admin/overview.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CeAbaranje || Dashboard/EditProfile</title>
-    <link rel="icon" href="../src/favicon.ico">
-    <link rel="stylesheet" href="../stylesheet/defaultdashboard.css">
-    <link rel="stylesheet" href="../stylesheet/overview.css">
-    <link rel="stylesheet" href="../annimations.css">
-    <link rel="stylesheet" href="../media.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
-      <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-thin.css"
-      >
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CeAbaranje || Dashboard/EditProfile</title>
+  <link rel="icon" href="../src/favicon.ico">
 
-      <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-solid.css"
-      >
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 
-      <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-regular.css"
-      >
 
-      <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-light.css"
-      >
+  <!-- FontAwesome CSS -->
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-thin.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-solid.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-regular.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-light.css">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="../stylesheet/defaultdashboard.css">
+  <link rel="stylesheet" href="../stylesheet/overview.css">
+  <link rel="stylesheet" href="../annimations.css">
+  <link rel="stylesheet" href="../media.css">
+  <script defer src="../script/overview.js"></script>
 </head>
 <body>
   <div class="loader">
@@ -64,7 +55,6 @@
                 <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i><p>Souls Won</p></li></a>
                 <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i><p>Schedule Service</p></li></a>
                 <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i><p>Annoucements</p></li></a>
-                <!-- <li class="dashboard-items></li> -->
               </ul>
             </div>
           </div>
@@ -74,37 +64,151 @@
                 <button class="button" id=""><i class="fa-duotone fa-right-from-bracket fa-lg"></i>Logout</button>
               </div>  
             </div>
-          </div>
         </div>
       </nav>
       <section class="dashboard-content">
         <div class="dashboard-content-box">
           <div class="dashboard-content-title">
             <a href="../index.html" class="go-back">
-              <!-- <i class="fa-solid fa-arrow-left"></i> -->
               <i class="fa-duotone fa-solid fa-house"></i>
               <p>Home</p>
             </a>
             <h1>Admin Dashboard</h1>
           </div>
           <div class="empty-div"></div>
-          <div class="overview">
-            <span class="overview-text">
-              <h2>User Details</h2>
-              <p>Verify and update your details </p>
-            </span>
-            <div class="prompt-parent hidden" id="message-prompt">
-              <div class="success-prompt" >
-                  <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
-                  <h2 id="message-text"></h2>
+          <div class="grid-chart">
+            <div class="default-chart-width number-chart dark-colour-style">
+              <span class="number-chart-title">Leaders</span>
+              <span class="number-data-chart-item" id="numberOfLeaders"></span>
+              <span class="number-data-chart-subtitle">Total Leaders</span>
+              <div class="absolute-tooltip">
+                <div class="charts-title">
+                  Total Number of Leaders the have been added to the database
+                </div>
               </div>
             </div>
-            <!-- HERE -->
             
-        </div>
+            <div class="default-chart-width number-chart">
+              <span class="number-chart-title">Users</span>
+              <span class="number-data-chart-item" id="numberOfUsers"></span>
+              <span class="number-data-chart-subtitle">Total Users</span>
+              <div class="absolute-tooltip">
+                <div class="charts-title">
+                  Total Number of Users the have registered on the website
+                </div>
+              </div>
+            </div>
+            
+            <div class="container default-chart-width">
+              <div class="absolute-tooltip">
+                <div class="charts-title">
+                  Total Number of Users the have registered on the website
+                </div>
+              </div>
+              <span class="prev">&#10094</span>
+              <span class="next">&#10095</span>
+              <section class="slides-row">
+                <div class="slide" id="lastIframeDuplicate">
+                  <div class="default-chart-width number-chart">
+                    <span class="number-chart-title">Cells</span>
+                    <span class="number-data-chart-item numberofcells"></span>
+                    <span class="number-data-chart-subtitle">Total Cells</span>
+                  </div>
+                </div>
+                <div class="slide">
+                  <div class="default-chart-width number-chart">
+                    <span class="number-chart-title">Pcf</span>
+                    <span class="number-data-chart-item" id="numberOfPcfs"></span>
+                    <span class="number-data-chart-subtitle">Total Pcfs</span>
+                  </div>
+                </div>
+                <div class="slide">
+                  <div class="default-chart-width number-chart">
+                    <span class="number-chart-title">Senior-Cells</span>
+                    <span class="number-data-chart-item" id="numberOfSeniorCells"></span>
+                    <span class="number-data-chart-subtitle">Total Senior-Cells</span>
+                  </div>
+                </div>                  
+                <div class="slide">
+                  <div class="default-chart-width number-chart">
+                    <span class="number-chart-title">Cells</span>
+                    <span class="number-data-chart-item" id="numberofcells"></span>
+                    <span class="number-data-chart-subtitle">Total Cells</span>
+                  </div>
+                </div>
+                <div class="slide" id="firstIframeDuplicate">
+                  <div class="default-chart-width number-chart">
+                    <span class="number-chart-title">Pcf</span>
+                    <span class="number-data-chart-item numberOfPcfs"></span>
+                    <span class="number-data-chart-subtitle">Total Pcfs</span>
+                  </div>
+                </div>
+              </section>
+              <section class="dots">
+                <div class="dot active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+              </section>
+
+            </div>
+            <div class="default-chart-width grid-span-col-2-3 dark-colour-style">
+              <iframe class="iframe-styles-reset" src="https://charts.mongodb.com/charts-christ-embassy-abaranje-btvzcmx/embed/charts?id=66b60160-ed35-4cf0-89b0-e2c43cc21680&maxDataAge=60&theme=dark&autoRefresh=true"></iframe>
+            </div>
+            <div class="default-chart-width grid-row-2-col-1">
+              <iframe class="iframe-styles-reset" src="https://charts.mongodb.com/charts-christ-embassy-abaranje-btvzcmx/embed/charts?id=66b5fda9-d349-4b06-8181-b9ce0eab0d05&maxDataAge=60&theme=light&autoRefresh=true"></iframe>
+            </div>
+
+            <div class="reportsChart grid-row-4-column-span-2">
+              <div class="default-chart-width reports-chart-container">
+                <div class="caption">
+                  <span>Recently Submitted Reports</span>
+                </div>
+                <div class="table-wrapper">
+                  <table class="reports-table" id="reports-Table">
+                    <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Cell</th>
+                        <th>Service Attendance</th>
+                        <th>Cell Attendance</th>
+                        <th>Cell First Timers</th>
+                        <th>Sunday First Timers</th>
+                        <th>Offering</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <!-- DATA POPULATED FROM SCRIPT -->
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+
+            <div class="reportsChart grid-row-4-column-2-span-2">
+              <div class="default-chart-width reports-chart-container">
+                <div class="caption">
+                  <span>Recently Added Leaders</span>
+                </div>
+                <div class="table-wrapper">
+                  <table class="reports-table" id="leaders-table">
+                    <thead>
+                      <tr>
+                        <th>Name Of Leader</th>
+                        <th>Cell</th>
+                        <th>Position</th>
+                        <th>Date</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <!-- DATA POPULATED FROM SCRIPT -->
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div> 
       </section>
     </main>
   </main>
-  <script defer src="../script/overview.js"></script>
 </body>
 </html>
