OverView Page Complete

--- a/public/admin/overview.html
+++ b/public/admin/overview.html
@@ -34,6 +34,7 @@
         <div class="vertical-navbar-box">
           <div class="nocssneeded">
             <div class="user-details">
+              <i id="CloseDrawer" class="fa-solid fa-xmark closeIcon"></i>
               <div class="admin-profile-icon">
                 <span class="greeting-user">
                   <i class="fa-duotone fa-user fa-2xl"></i>
@@ -69,6 +70,7 @@
       <section class="dashboard-content">
         <div class="dashboard-content-box">
           <div class="dashboard-content-title">
+            <button class="drawerIcon" id="DrawerIcon">≡</button>
             <a href="../index.html" class="go-back">
               <i class="fa-duotone fa-solid fa-house"></i>
               <p>Home</p>
@@ -158,7 +160,7 @@
               <iframe class="iframe-styles-reset" src="https://charts.mongodb.com/charts-christ-embassy-abaranje-btvzcmx/embed/charts?id=66b5fda9-d349-4b06-8181-b9ce0eab0d05&maxDataAge=60&theme=light&autoRefresh=true"></iframe>
             </div>
 
-            <div class="reportsChart grid-row-4-column-span-2">
+            <div class="default-chart-width reportsChart grid-row-4-column-span-2">
               <div class="default-chart-width reports-chart-container">
                 <div class="caption">
                   <span>Recently Submitted Reports</span>
@@ -184,7 +186,7 @@
               </div>
             </div>
 
-            <div class="reportsChart grid-row-4-column-2-span-2">
+            <div class="default-chart-width reportsChart grid-row-4-column-2-span-2">
               <div class="default-chart-width reports-chart-container">
                 <div class="caption">
                   <span>Recently Added Leaders</span>
