--- a/public/admin/schedule-service.html
+++ b/public/admin/schedule-service.html
@@ -40,6 +40,7 @@
         <div class="vertical-navbar-box">
           <div class="nocssneeded">
             <div class="user-details">
+              <i id="CloseDrawer" class="fa-solid fa-xmark closeIcon"></i>
               <div class="admin-profile-icon">
                 <span class="greeting-user">
                   <i class="fa-duotone fa-user fa-2xl"></i>
@@ -73,6 +74,7 @@
       <section class="dashboard-content">
         <div class="dashboard-content-box">
           <div class="dashboard-content-title">
+            <button class="drawerIcon" id="DrawerIcon">≡</button>
             <a href="../index.html" class="go-back">
               <!-- <i class="fa-solid fa-arrow-left"></i> -->
               <i class="fa-duotone fa-solid fa-house"></i>
