--- a/public/admin/addacell.html
+++ b/public/admin/addacell.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CeAbaranje || Dashboard/EditProfile</title>
-    <link rel="icon" href="../src/favicon.ico">
-    <link rel="stylesheet" href="../stylesheet/defaultdashboard.css">
-    <link rel="stylesheet" href="../stylesheet/addacell.css">
-    <link rel="stylesheet" href="../annimations.css">
-    <link rel="stylesheet" href="../media.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
-      <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-thin.css"
-      >
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CeAbaranje || Dashboard/EditProfile</title>
+  <link rel="icon" href="../src/favicon.ico">
+  <link rel="stylesheet" href="../stylesheet/defaultdashboard.css">
+  <link rel="stylesheet" href="../stylesheet/addacell.css">
+  <link rel="stylesheet" href="../annimations.css">
+  <link rel="stylesheet" href="../media.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-thin.css">
 
-      <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-solid.css"
-      >
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-solid.css">
 
-      <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-regular.css"
-      >
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-regular.css">
 
-      <link
-        rel="stylesheet"
-        href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-light.css"
-      >
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-light.css">
 </head>
+
 <body>
   <div class="loader">
     <div class="inner-loader"></div>
   </div>
   <main class="sub-body">
     <div class="prompt-parent hidden" id="message-prompt">
-      <div class="success-prompt" >
-          <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
-          <h2 id="message-text"></h2>
+      <div class="success-prompt">
+        <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
+        <h2 id="message-text"></h2>
       </div>
     </div>
     <main class="dashboard-sub-body">
@@ -49,11 +39,14 @@
         <div class="vertical-navbar-box">
           <div class="nocssneeded">
             <div class="user-details">
+              <i id="CloseDrawer" class="fa-solid fa-xmark closeIcon"></i>
               <div class="admin-profile-icon">
-                <span class="greeting-user">
+                <span class="greeting-user">    
                   <i class="fa-duotone fa-user fa-2xl"></i>
                 </span>
-                <span><p class="userGreeting" id="usersdetails">Admin</p></span>
+                <span>
+                  <p class="userGreeting" id="usersdetails">Admin</p>
+                </span>
               </div>
               <span class="edit-profile hidden">
                 <i class="fa-duotone fa-user-pen"></i>
@@ -63,13 +56,41 @@
             <div class="edit-profile"></div>
             <div class="navbar-list-items">
               <ul class="dashboard-links">
-                <a href="./overview.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i><p>Overview</p></li></a>
-                <a href="./addacell.html"><li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i><p>Add a cell</p></li></a>
-                <a href="./view-users.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i><p>View Users</p></li></a>
-                <a href="./view-cell-reports.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i><p>View Cell Reports</p></li></a>
-                <a href="./souls-won.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i><p>Souls Won</p></li></a>
-                <a href="./schedule-service.html"><li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i><p>Schedule Service</p></li></a>
-                <a href="./send-announcements.html"><li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i><p>Annoucements</p></li></a>
+                <a href="./overview.html">
+                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-tachograph-digital"></i>
+                    <p>Overview</p>
+                  </li>
+                </a>
+                <a href="./addacell.html">
+                  <li class="dashboard-items"><i class="fa-solid fa-circle-plus"></i>
+                    <p>Add a cell</p>
+                  </li>
+                </a>
+                <a href="./view-users.html">
+                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-users"></i>
+                    <p>View Users</p>
+                  </li>
+                </a>
+                <a href="./view-cell-reports.html">
+                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-chart-bar"></i>
+                    <p>View Cell Reports</p>
+                  </li>
+                </a>
+                <a href="./souls-won.html">
+                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-trophy"></i>
+                    <p>Souls Won</p>
+                  </li>
+                </a>
+                <a href="./schedule-service.html">
+                  <li class="dashboard-items"><i class="fa-duotone fa-solid fa-calendar-days"></i>
+                    <p>Schedule Service</p>
+                  </li>
+                </a>
+                <a href="./send-announcements.html">
+                  <li class="dashboard-items"><i class="fa-solid fa-paper-plane-top"></i>
+                    <p>Annoucements</p>
+                  </li>
+                </a>
                 <!-- <li class="dashboard-items></li> -->
               </ul>
             </div>
@@ -78,7 +99,7 @@
             <div class="logout-parent" id="Logout-Button">
               <div class="logout-button">
                 <button class="button" id=""><i class="fa-duotone fa-right-from-bracket fa-lg"></i>Logout</button>
-              </div>  
+              </div>
             </div>
           </div>
         </div>
@@ -86,6 +107,7 @@
       <section class="dashboard-content">
         <div class="dashboard-content-box">
           <div class="dashboard-content-title">
+            <button class="drawerIcon" id="DrawerIcon">≡</button>
             <a href="../index.html" class="go-back">
               <!-- <i class="fa-solid fa-arrow-left"></i> -->
               <i class="fa-duotone fa-solid fa-house"></i>
@@ -148,10 +170,11 @@
             <div class="parent-button">
               <button type="submit" id="submitnewcellbutton" class="submitreportbutton">Submit</button>
             </div>
-        </div>
+          </div>
       </section>
     </main>
   </main>
   <script defer src="../script/addacell.js"></script>
 </body>
+
 </html>
