--- a/public/admin/view-cell-reports.html
+++ b/public/admin/view-cell-reports.html
@@ -72,6 +72,7 @@
         <div class="vertical-navbar-box">
           <div class="nocssneeded">
             <div class="user-details">
+              <i id="CloseDrawer" class="fa-solid fa-xmark closeIcon"></i>
               <div class="admin-profile-icon">
                 <span class="greeting-user">
                   <i class="fa-duotone fa-user fa-2xl"></i>
@@ -105,6 +106,7 @@
       <section class="dashboard-content">
         <div class="dashboard-content-box">
           <div class="dashboard-content-title">
+            <button class="drawerIcon" id="DrawerIcon">≡</button>
             <a href="../index.html" class="go-back">
               <!-- <i class="fa-solid fa-arrow-left"></i> -->
               <i class="fa-duotone fa-solid fa-house"></i>
@@ -112,7 +114,6 @@
             </a>
             <h1>Admin Dashboard</h1>
           </div>
-
           <div class="empty-div"></div>
           <div class="overview">
             <!-- HERE -->
