RELATVIE PATH UPDATE

--- a/public/dashboard/submit-report.html
+++ b/public/dashboard/submit-report.html
@@ -92,7 +92,7 @@
             </span>
             
           </div>
-            <form class="form-container" action="http://localhost:5000/submitcellreport" method="post" id="cellReportForm">
+            <form class="form-container" method="post" id="cellReportForm">
               <div class="form-group">
                 <input type="text" placeholder="" name="FirstName" id="FirstName" required></input>
                 <label for="FirstName">First Name</label>
