--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -49,7 +49,7 @@
                         <p>Enter your Details</p>
                     </div>
 
-                    <form action="http://localhost:5000/login" method="post" class="login-form" id="loginFormRequest">
+                    <form class="login-form" id="loginFormRequest">
                         <div class="login-form-sub-container">
                             <div class="input-groups">
                             <input type="text" name="usersinput" id="usersinput" placeholder="">
