BACKEND FILE RESTRUCTURE

--- a/public/admin/overview.html
+++ b/public/admin/overview.html
@@ -156,7 +156,7 @@
             <div class="default-chart-width grid-span-col-2-3 dark-colour-style">
               <iframe class="iframe-styles-reset" src="https://charts.mongodb.com/charts-christ-embassy-abaranje-btvzcmx/embed/charts?id=66b60160-ed35-4cf0-89b0-e2c43cc21680&maxDataAge=60&theme=dark&autoRefresh=true"></iframe>
             </div>
-            <div class="default-chart-width grid-row-2-col-1">
+            <div class="default-chart-width grid-row-2-col-1 lgt-bk">
               <iframe class="iframe-styles-reset" src="https://charts.mongodb.com/charts-christ-embassy-abaranje-btvzcmx/embed/charts?id=66b5fda9-d349-4b06-8181-b9ce0eab0d05&maxDataAge=60&theme=light&autoRefresh=true"></iframe>
             </div>
 
