--- a/public/admin/send-announcements.html
+++ b/public/admin/send-announcements.html
@@ -72,7 +72,14 @@
           <div class="empty-div"></div>
           <div class="overview">
             <!-- HERE -->
-            
+          <form action="" method="post" id="AnnoucementsForm" class="form-container">
+            <div class="form-group">
+              <textarea name="content" id="content" placeholder="Send Message"></textarea>
+            </div>
+            <button type="submit" title="send Message">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
+            </button>
+          </form>
         </div>
       </section>
     </main>
