IDK MEDIA COMMIT

--- a/public/admin/addacell/addacell.html
+++ b/public/admin/addacell/addacell.html
@@ -100,27 +100,21 @@
           <div class="dashboard-content-title">
             <button class="drawerIcon" id="DrawerIcon">≡</button>
             <a href="javascript:history.back()" class="go-back">
-              <!-- <i class="fa-solid fa-arrow-left"></i> -->
-              <i class="fa-duotone fa-solid fa-house"></i>
-              <p>Home</p>
+              <i class="fa-duotone fa-arrow-left"></i>
+              <!-- <i class="fa-duotone fa-solid fa-house"></i> -->
             </a>
-            <h1>Admin Dashboard</h1>
+            <h1>New Cell</h1>
           </div>
           <div class="empty-div"></div>
           <div class="overview">
-            <span class="overview-text">
-              <h2>Add a Cell</h2>
-              <p>add a new cell</p>
-            </span>
-            <!-- HERE -->
             <form action="" method="post" id="addacellform" class="form-container">
               <div class="left-group">
                 <div class="form-group">
-                  <input type="text" placeholder="" name="NameOfLeader" id="NameOfLeader" required></input>
+                  <input type="text" placeholder="" name="NameOfLeader" id="NameOfLeader" required>
                   <label for="NameOfLeader">Name Of Leader</label>
                 </div>
                 <div class="form-group">
-                  <input type="phone" placeholder="" name="PhoneNumber" id="PhoneNumber" required></input>
+                  <input type="phone" placeholder="" name="PhoneNumber" id="PhoneNumber" required>
                   <label for="PhoneNumber">Phone Number</label>
                 </div>
                 <div class="form-group">
@@ -142,18 +136,16 @@
                   </select>
                   <label for="CellType">Cell Type</label>
                 </div>
-              </div>
-              <div class="right-content">
                 <div class="form-group hidden" id="pcf-name">
-                  <input type="text" placeholder="" name="NameOfPcf" id="NameOfPcf" required></input>
+                  <input type="text" placeholder="" name="NameOfPcf" id="NameOfPcf" required>
                   <label for="NameOfPcf">Name of PCF</label>
                 </div>
                 <div class="form-group hidden" id="senior-cell-name">
-                  <input type="text" placeholder="" name="NameOfSeniorCell" id="NameOfSeniorCell" required></input>
+                  <input type="text" placeholder="" name="NameOfSeniorCell" id="NameOfSeniorCell" required>
                   <label for="NameOfSeniorCell">Name Of Senior Cell</label>
                 </div>
                 <div class="form-group hidden" id="cell-name">
-                  <input type="text" placeholder="" name="NameOfCell" id="NameOfCell" required></input>
+                  <input type="text" placeholder="" name="NameOfCell" id="NameOfCell" required/>
                   <label for="NameOfCell">Name Of Cell</label>
                 </div>
               </div>
@@ -162,6 +154,7 @@
               <button type="submit" id="submitnewcellbutton" class="submitreportbutton">Submit</button>
             </div>
           </div>
+        </div>
       </section>
     </main>
   </main>
