--- a/public/admin/overview/overview.html
+++ b/public/admin/overview/overview.html
@@ -95,9 +95,8 @@
             <button class="drawerIcon" id="DrawerIcon">≡</button>
             <a href="javascript:history.back()" class="go-back">
               <i class="fa-duotone fa-solid fa-house"></i>
-              <p>Home</p>
             </a>
-            <h1>Admin Dashboard</h1>
+            <h1>Overview</h1>
           </div>
           <div class="empty-div"></div>
           <div class="grid-chart">
