--- a/public/admin/messages/messages.html
+++ b/public/admin/messages/messages.html
@@ -283,7 +283,7 @@
           <div class="empty-div"></div>
           <div class="grid-messages">
             <!-- HERE -->
-            <div class="messages row-2">
+            <div class="messages">
               <div class="scroll">
                 <!-- <h3>Messages</h3> -->
                 <div id="messageBody" class="messageBody">
@@ -300,7 +300,7 @@
                 </div>
               </div>
             </div>
-            <div class="container row-1">
+            <div class="container">
               <button type="button" title="compose" onclick="toggleModal()">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                   <path d="M0 0h24v24H0z" fill="none" />
