--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Authorized</title>
+    <title>404</title>
     <style>
         body {
             display: flex;
@@ -23,6 +23,6 @@
 </head>
 <body>
     <h1>404</h1>
-    <h2>Only admins are authorized</h2>
+    <h2>Something went wrong</h2>
 </body>
 </html>
