--- a/public/admin/view-cell-reports/view-cell-reports.html
+++ b/public/admin/view-cell-reports/view-cell-reports.html
@@ -152,21 +152,15 @@
                 </table>
               </div>
             </div>
-              <!-- <th>Phone Number</th> -->
-              <!-- <th>Service Attendance</th> -->
-              <!-- <[th>Sunday First Timers</> -->
-              <!-- <th>Cell Meeting Attendance</th> -->
-              <!-- <th>First Timers</th>                       -->
-              <!-- <th>Offering</th> -->
-              <!-- <]th>submission Date</> -->
+          </div>
         </div>
         <footer class="dashboard-footer">
           <div class="footer-container">
             <a href="/admin/view-cells-leaders">View Cells and Leaders</a>
             <div id="paginationControls" class="pagination">
-              <button id="prevPage" disabled>&laquo; Previous</button>
+              <button type="button" id="prevPage" disabled>&laquo; Previous</button>
               <span id="pageInfo"></span>
-              <button id="nextPage">Next &raquo;</button>
+              <button type="button" id="nextPage">Next &raquo;</button>
           </div>
           </div>
         </footer>
